[gd_scene load_steps=4 format=3 uid="uid://diqbqcxh8x3pq"]

[ext_resource type="Script" path="res://scenes/menus/main_menu/main_menu.gd" id="1_0cuej"]
[ext_resource type="Texture2D" uid="uid://b70xodv4h8e7m" path="res://assets/menu terrain background.PNG" id="2_fixrk"]
[ext_resource type="FontFile" uid="uid://byy8c6uknahne" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_s6o53"]

[node name="Main Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cuej")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fixrk")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_s6o53")
theme_override_font_sizes/font_size = 64
text = "MADHEART"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6o53")
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6o53")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="ExitBtn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6o53")
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/StartBtn" to="." method="on_start_pressed"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/Settings" to="." method="on_settings_pressed"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/ExitBtn" to="." method="on_exit_pressed"]
